Updated to canary new ui view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Application</string>
     <string name="show_dialog">Show Dialog</string>
     <string name="click">Click</string>
+    <string name="do_action">DO ACTION</string>
 </resources>
