--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="show_dialog">Show Dialog</string>
     <string name="click">Click</string>
     <string name="do_action">DO ACTION</string>
+    <string name="search_in_play_store">Search In Play Store</string>
 </resources>
